# xPaste

./: .gitignore  AboutPage.qml  CMakeLists.txt  ComboBoxDropdown.qml  ComboBoxHeader.qml  CustomCheckbox.qml  CustomComboBox.qml  CustomSpinBox.qml  HookHandler.cpp  HookHandler.h  Hotkey.cpp  Hotkey.h  HotkeyEventFilter.h  HotkeyInput.qml  LabelSeparator.qml  Main.qml  Manager.cpp  Manager.h  Paster.cpp  Paster.h  README.md  Settings.cpp  Settings.h  SettingsPage.qml  Tab.qml  TabButton.qml  TrayIcon.cpp  TrayIcon.h  Utils.cpp  Utils.h  WindowThemeSetter.cpp  WindowThemeSetter.h  main.cpp
assets/: version.rc  xPaste.rc
qml/: AboutPage.qml  CustomCheckbox.qml  CustomComboBox.qml  Main.qml
src/: HookHandler.cpp  HookHandler.h  Hotkey.h  Manager.h  Paster.cpp  Settings.cpp  Settings.h  TrayIcon.cpp  Utils.h  WindowThemeSetter.cpp  main.cpp
